test/files/neg/t5452-new.check
t5452-new.scala:30: error: overloaded method value apply with alternatives:
  ()Queryable[CoffeesTable] <and>
  (t: Tree)(implicit evidence$2: scala.reflect.ClassTag[CoffeesTable])Nothing <and>
  (implicit evidence$1: scala.reflect.ClassTag[CoffeesTable])Nothing
 cannot be applied to (Queryable[CoffeesTable])
  Queryable[CoffeesTable](  q.treeFilter(null)  )
           ^
one error found
